Volt Research Emulator (Experimental IBM PC emulator)

Pre-Alpha 1.4
XX XXXXXXX 2025

Pre-Alpha 1.3
1 September 2025

Changes:

=== EMULATION ===

General:
Renamed all _clk cvars to be _clock
Implemented a memory mapping system. Devices can provide physical memory mappings and load into RAM. Later on, methods of the Component
class will be called to allow custom AddressSpaces

Add the ability to limit the amount of system RAM using emu_system_ram
Add config .volt files
Add "early_start" components for components that other components depend on the memory mapping of

8086:
Fix CMP immed actually doing XOR

=== CORE SYSTEMS ===
Made the BIOS a component (machine_add_component ibmxtv3)
Remove "exec" command mapping ()
Close the BIOS files after opening

Pre-Alpha 1.2
28 August 2025

Changes:

=== EMULATION ===

8086:
* Add string instructions
* Fix GRP1 16-to-8 variant (0x83)
* Fix POP segreg
* Add CBW and CWD instructions

Peripherals:
* Some basic 8255 PPI emulation (not much)

=== CORE SYSTEMS ===
* Fix closing files
* Much more comprehensive shutdown functions
* Add "machine_add_component" command to configure component system
* Strings passed through Command_Argv are now trimmed on the right by default (they don't need to be trimmed on the left)
* Add the "+exec" command line option to run any number of optional files. They are processed immediately after autoexec.Volt

Pre-Alpha 1.0/1.1
23/27 August 2025

Changes:

=== EMULATION ===
* I/O system added
* DMA 8237 controller added (non-working enough to pass tests)
* PIT 8259 added (enough to pass tests)
* Components now receive a pointer to their attached machine
* Added function (GetComponentWithClass<T*>) to find a component of a certain class
* XTv3 BIOS (1986) reaches 16k RAM test

8086:
* Stack implemented
* GRP4/GRP5 implemented 
* RET, NEAR CALL, FAR CALL implemented
* LOOP implemented 
* Fix many MOVs
* Fix the zero flag
* Fix 16-bit CMP 
* Fix segment overrides
* 9F POP + A0-A3 MOV added
* XCHG added