@@ -22,6 +22,7 @@ namespace Volt
     float clear_frame_number = 0;
 
     // Initialises the GL4 renderer
+    // Failure to initialise is a FATAL ERROR.
     void R_GL4_Init()
     {
         Logging_LogChannel("******** R_GL4_Init ********", LogChannel::Debug);
@@ -32,7 +33,8 @@ namespace Volt
         else
             Logging_LogChannel("GLFW %s initialised", LogChannel::Debug, glfwGetVersionString());
 
-        // OpenGL 3.3, Core Profile - very compatible
+        // OpenGL 4.3, Core Profile. We need compute shaders and works on all consumer GPUs from the last 15 years.
+        // Mac will need metal (modern OpenGL on mac sucks anyway)
         glfwWindowHint(GLFW_CONTEXT_VERSION_MAJOR, 4);
         glfwWindowHint(GLFW_CONTEXT_VERSION_MINOR, 3);
         glfwWindowHint(GLFW_OPENGL_PROFILE, GLFW_OPENGL_CORE_PROFILE);
@@ -53,6 +55,31 @@ namespace Volt
 
         if (!gladLoadGLLoader((GLADloadproc)glfwGetProcAddress))
             Logging_LogChannel("GL4 Renderer failed to initialise. gladLoadGLLoader failed. Can only run with +set renderer none.", LogChannel::Fatal);
+
+        // Make sure that we actually got OpenGL 4.3
+        GLint gl_major, gl_minor;
+
+        glGetIntegerv(GL_MAJOR_VERSION, &gl_major);
+        glGetIntegerv(GL_MINOR_VERSION, &gl_minor);
+
+        if (gl_major < 4
+        || (gl_major == 4) && (gl_minor < 3))
+        {
+            Logging_LogChannel("Your graphics hardware or drivers are not OpenGL 4.3 compliant.\n"
+                "OpenGL 4.3 is required due to the use of compute shaders in Volt. In general, most dedicated graphics hardware released in 2010 or later, "
+                ", and integrated graphics after 2013 have OpenGL 4.3 compliance.\n\n"
+                "- If you are using a Mac, Metal support is not available yet, and macOS does not support beyond OpenGL 4.1. Sorry. Blame Apple.\n"
+                "- If you are using official drivers on an NVIDIA GPU, only Fermi architecture (GTX 400 series) and later GPUs are supported.\n"
+                "- If you are using official drivers on an AMD GPU, only TeraScale 2 (HD 5000) architecture and later GPUs are supported.\n"
+                "- If you are using official drivers on an Intel GPU, only units made after 2013 (starting with HD 4x00) are supported.\n"
+                "If you have a supported GPU, try updating your graphics drivers.\n"
+                "If you do not, try using unofficial drivers on Linux like Mesa3D. Otherwise, get a newer graphics card.\n\n"
+                "OpenGL version provided: %d.%d", 
+                LogChannel::Fatal, gl_major, gl_minor);
+            return;
+        }
+
+        Logging_LogChannel("OpenGL Version %s", LogChannel::Debug, glGetString(GL_VERSION));
 
         // At this point it's safe to do rendering stuff, so set fullscreen if it's set
         R_GL4_OnFullscreenChanged();
@@ -155,38 +182,122 @@ namespace Volt
 
     }
 
-    bool R_GL4_CompileShader(VoltShaderSet* set, VoltShaderType type, VoltFile* file)
+    bool R_GL4_CompileSingleShader(VoltShaderSet* set, VoltShaderType type)
     {
-        const char* shader_code;
+        auto shader_type = GL_VERTEX_SHADER;
+        VoltShader& target = set->vertex;
+        int32_t successful;
 
-        std::stringstream string;
-        string << file->stream.rdbuf();
-        shader_code = string.str().c_str();
-
-        uint32_t shader_type = GL_VERTEX_SHADER;
-
-        if (shader_type == VoltShaderType::Fragment)
-            shader_type = GL_FRAGMENT_SHADER;
-        else if (shader_type == VoltShaderType::Geometry)
-            shader_type = GL_GEOMETRY_SHADER;
-
-
-        switch (type)
+        if (type == VoltShaderType::Fragment)
         {
-            case VoltShaderType::Vertex:
-                glCreateShader(GL_VERTEX_SHADER);
-                break;
+            shader_type = GL_FRAGMENT_SHADER;
+            target = set->fragment;
         }
+        if (type == VoltShaderType::Geometry)
+        {
+            shader_type = GL_GEOMETRY_SHADER;
+            target = set->geometry;
+        }
+        if (type == VoltShaderType::Compute)
+        {
+            shader_type = GL_COMPUTE_SHADER;
+            target = set->compute;
+        }
+
+        auto shader = glCreateShader(shader_type);
+        glShaderSource(shader, 1, &target.code, nullptr);
+        glCompileShader(shader);
+
+        target.id = shader; //check
+
+        // See if the shader was successfully compiled!
+        glGetShaderiv(shader, GL_COMPILE_STATUS, &successful);
+
+        if (!successful)
+        {
+            char info_log[MAX_STRING_LENGTH] = {0};
+            glGetShaderInfoLog(shader, MAX_STRING_LENGTH, nullptr, info_log);
+
+            Logging_LogChannel("******** Shader compilation failure. ********\nInformation: %s", LogChannel::Fatal, info_log);
+            return false;
+        }
+
+        target.loaded = true; 
+        return true;
+    }
+
+    bool R_GL4_CompileShader(VoltShaderSet* set)
+    {
+        // copy in the name of the file
+
+        bool successful = true; 
+
+        if (set->vertex.code)
+            successful = R_GL4_CompileSingleShader(set, VoltShaderType::Vertex);
+    
+        if (!successful)
+            return false;
+
+        if (set->fragment.code)
+            successful = R_GL4_CompileSingleShader(set, VoltShaderType::Fragment);
+            
+        if (!successful)
+            return false;
+
+        if (set->geometry.code)
+            successful = R_GL4_CompileSingleShader(set, VoltShaderType::Geometry);
+
+        if (!successful)
+            return false;
+    
+        if (set->compute.code)
+            successful = R_GL4_CompileSingleShader(set, VoltShaderType::Compute);
+
+        if (!successful)
+            return false;
+
+        // Now, link the shaders into a shader program
+        set->program_id = glCreateProgram();
+
+        if (set->vertex.loaded)
+            glAttachShader(set->program_id, set->vertex.id);
+
+        if (set->fragment.loaded)
+            glAttachShader(set->program_id, set->fragment.id);
         
+        if (set->geometry.loaded)
+            glAttachShader(set->program_id, set->geometry.id);
+    
+        if (set->compute.loaded)
+            glAttachShader(set->program_id, set->compute.id);
+
+        glLinkProgram(set->program_id);
+        int32_t program_compile_successful, program_link_successful;
+ 
+        // See if the program was successful.
+        glGetProgramiv(set->program_id, GL_COMPILE_STATUS, &program_compile_successful);
+        glGetProgramiv(set->program_id, GL_LINK_STATUS, &program_link_successful);
+
+        char info_log[MAX_STRING_LENGTH] = {0};
+
+        if (!program_compile_successful)
+        {
+            glGetProgramInfoLog(set->program_id, MAX_STRING_LENGTH, nullptr, info_log);
+            Logging_LogChannel("******** Shader program compilation failure. ********\nInformation: %s", LogChannel::Error, info_log);
+            return false;
+        }
+
+        if (!program_link_successful)
+        {
+            glGetProgramInfoLog(set->program_id, MAX_STRING_LENGTH, nullptr, info_log);
+            Logging_LogChannel("******** Shader program linking failure. ********\nInformation: %s", LogChannel::Error, info_log);
+            return false;
+        }
         return true; 
     }
 
-    bool R_GL4_FreeShader(VoltShaderSet* set, VoltShaderType type, VoltFile* file)
+    bool R_GL4_FreeShader(VoltShaderSet* set)
     {
-        switch (type)
-        {
-            
-        }
 
         return true; 
     }
