@@ -3,6 +3,17 @@ Volt Research Emulator (Experimental IBM PC emulator)
 Pre-Alpha 1.4
 XX XXXXXXX 2025
 
+Changes:
+
+=== EMULATION ===
+* PortRead and PortWrite are now acutally 16 bit
+
+=== CORE SYSTEMS ===
+
+* Moved OpenGL renderer from OpenGL 3.3 Core Profile to OpenGL 4.3 Core Profile so that compute shaders can be used
+	* Renamed GL3 renderer to GL4 renderer
+	* GPU support is now for all dedicated GPUs released in 2010 and later and integrated GPUs released in 2013 and later, rather than 2006 and 2012. 
+
 Pre-Alpha 1.3
 1 September 2025
 
